# cronus

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  TODO.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.agents/skills/eval-prompts/: SKILL.md
.cargo/: config.toml
.design/: INDEX.md  RULES.md  graph-before.json  workspace.json
.design/.cache/: finalize-state.json
.design/main/: CHANGELOG.md  CONTEXT.md  INDEX.md  PLAN.md  RETROSPECTIVE.md  STATE.md  TASKS.md
.design/main/specifications/: l1-acp.md  l1-action-gating.md  l1-agent-coevaluation.md  l1-agent-federation.md  l1-agent-framework-skeleton.md  l1-agent-tool-ergonomics.md  l1-anomaly-consensus.md  l1-application-shell.md  l1-architecture.md  l1-attestation.md  l1-automation-canvas.md  l1-automation-pipeline.md  l1-background-activation.md  l1-browser-control.md  l1-cache-stable-context.md  l1-change-attribution.md  l1-change-merge.md  l1-claim-verification.md  l1-code-execution.md  l1-code-intelligence.md  l1-competitive-execution.md  l1-completion-verification.md  l1-component-scanning.md  l1-confidentiality-flow.md  l1-content-segmentation.md  l1-context-attachment.md  l1-context-compression.md  l1-context-degradation.md  l1-context-provenance.md  l1-convergence-gate.md  l1-conversation-rewind.md  l1-conversational-control.md  l1-cost-rating.md  l1-crash-recovery.md  (+201 more)
.design/nodus/: CHANGELOG.md  CONTEXT.md  INDEX.md  PLAN.md  RETROSPECTIVE.md  STATE.md  TASKS.md
.drafts/: TODO.md  UX-UI - разбор 3 кейсов.md  UX-дизайн - 6 психологических принципов.md  heartbeat.md  project-names.md  references.md  technology-stack-research.md  ui-ux.md
.github/: dependabot.yml
.github/workflows/: deps-gate.yml
.release/.cronus/: channels.json
.release/state/: .env.example  AGENTS.md  app.json  channels.json  gateway.json  models.json  routing.json
_release/.corporation/: models.json
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/tauri/: Cargo.toml  audit.toml  tauri.conf.json
apps/desktop/tauri/capabilities/: default.json
apps/desktop/tauri/src/: bridge.rs  instance.rs  lib.rs  main.rs  mcp.rs  overlay.rs  prompts.rs  settings.rs  shortcuts.rs  tray.rs
crates/activation-os/: Cargo.toml
crates/activation-os/src/: lib.rs  linux_calls.rs  macos_calls.rs  windows_calls.rs
crates/auth-local/: Cargo.toml
crates/auth-local/src/: developer_admission.rs  lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  commands.rs  main.rs  output.rs
crates/cli/tests/: cli_smoke.rs
crates/codegraph/: Cargo.toml
crates/codegraph/benches/: extraction.rs
crates/codegraph/src/: community.rs  dedup.rs  extractor.rs  index.rs  lib.rs  search.rs
crates/codegraph/tests/: codegraph.rs
crates/contract/: Cargo.toml
crates/core/: Cargo.toml  README.md
crates/core/benches/: memory_store.rs  model_router.rs
crates/core/src/: activation_bootstrap.rs  agent_migration.rs  agent_registry.rs  auth.rs  autonomy.rs  budget.rs  checkpoint.rs  constitution.rs  context_compaction.rs  context_mgmt.rs  context_router.rs  deliberation.rs  dev_office_gate.rs  dev_office_workspace.rs  egress.rs  engine_lock.rs  exec_workspace.rs  file_store.rs  global_orch.rs  hooks.rs  inbox.rs  knowledge_bootstrap.rs  learning.rs  lib.rs  lookahead.rs  loop_bootstrap.rs  mission.rs  model_bridge.rs  office_control.rs  orchestration.rs  quality.rs  redact.rs  research.rs  scheduler.rs  secrets.rs  store.rs  tool_security.rs  trigger_triage.rs  voice.rs  workspace.rs
crates/core/src/extensions/: mod.rs
crates/core/src/kanban/: mod.rs
crates/core/src/memory/: chain.rs  consolidation.rs  encryption.rs  mod.rs  store.rs
crates/core/src/roles/: instance.rs  mod.rs  revision.rs
crates/core/src/router/: cache.rs  circuit.rs  hardware.rs  mod.rs  provider.rs  recovery.rs  scoring.rs
crates/core/src/session/: interrupt.rs  mod.rs  turn.rs
crates/core/src/skills/: convert.rs  mod.rs  store.rs  synthesize.rs
crates/core/tests/: activation_invariants.rs  agent_autonomy.rs  agent_constitution.rs  agent_registry.rs  agent_session.rs  archetype_invariants.rs  budget_engine.rs  context_management.rs  context_router.rs  deep_research.rs  dev_office_invariants.rs  engine.rs  exec_workspace.rs  extension_registry.rs  hardening_integration.rs  inbox.rs  kanban_board.rs  knowledge_invariants.rs  learning_loop.rs  loop_invariants.rs  memory_encryption.rs  memory_store.rs  memory_validation.rs  mission_mode.rs  model_error_recovery.rs  model_router.rs  orchestration.rs  plugin_hooks.rs  quality_pipeline.rs  role_catalog.rs  scheduler.rs  session_checkpoint.rs  skill_system.rs  tool_security.rs  transport_e2e.rs  trigger_triage.rs  wiki_invariants.rs  wiki_rebuild.rs  workspace_management.rs
crates/domain/: Cargo.toml
crates/model-local/: Cargo.toml
crates/nodus/: Cargo.toml  EXTRACTION.md  README.md
crates/nodus/.github/workflows/: ci.yml
crates/nodus/src/: ast.rs  environment.rs  error.rs  executor.rs  lexer.rs  lib.rs  observability.rs  parser.rs  portability.rs  transpiler.rs  validator.rs  vocab.rs  workflows.rs
crates/nodus/tests/: control_flow.rs  dialog.rs  environment.rs  invariants.rs  observability.rs  parity.rs  portability.rs  testing.rs
crates/nodus/tests/fixtures/: conditional.nodus  for_loop.nodus  lint_missing_runtime.nodus  lint_name_mismatch.nodus  lint_publish_before_validate.nodus  macro_expand.nodus  parallel_join.nodus  simple_log.nodus  ticket_triage.nodus  until_quality_loop.nodus
crates/store-local/: Cargo.toml
crates/store-local/src/: inbox.rs  knowledge.rs  lib.rs  wiki.rs  workspace.rs
crates/store-local/src/memory/: capture.rs  consolidate.rs  maintenance.rs  mod.rs  predicate.rs  signal.rs  store.rs  trust.rs
crates/store-local/tests/: inbox.rs  memory_encryption.rs  memory_store.rs  workspace_management.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: app.rs  command.rs  lib.rs  main.rs  terminal.rs  view.rs
crates/workflow/: README.md
scripts/: check-domain-boundary.mjs
(+176 files in other folders)
