[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/codegraph",
    "crates/nodus",
    "crates/cli",
    "crates/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = ""
repository = "https://github.com/teratron/cronus"
homepage = "https://github.com/teratron/cronus"
documentation = "https://teratron.github.io/cronus"
readme = "README.md"

[workspace.dependencies]
codegraph = { path = "crates/codegraph" }
cronus = { path = "crates/core" }
nodus = { path = "crates/nodus" }
aes-gcm = "0.10"
argon2 = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cron = "0.17"
keyring = "4"
rusqlite = { version = "0.40", features = ["bundled"] }
serde_json = "1"
