[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/contract",
    "crates/domain",
    "crates/store-local",
    "crates/auth-local",
    "crates/model-local",
    "crates/codegraph",
    "crates/nodus",
    "crates/cli",
    "crates/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = ""
repository = "https://github.com/teratron/cronus"
homepage = "https://github.com/teratron/cronus"
documentation = "https://teratron.github.io/cronus"
readme = "README.md"

[workspace.dependencies]
cronus-codegraph = { path = "crates/codegraph" }
cronus-core = { path = "crates/core" }
cronus-contract = { path = "crates/contract" }
cronus-domain = { path = "crates/domain" }
cronus-store-local = { path = "crates/store-local" }
cronus-auth-local = { path = "crates/auth-local" }
cronus-model-local = { path = "crates/model-local" }
nodus = { path = "crates/nodus" }
aes-gcm = "0.11.0"
argon2 = "0.5.3"
bcrypt = "0.19.2"
blake3 = "1.8.5"
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
cron = "0.17.0"
crossterm = "0.29.0"
getrandom = "0.4.3"
hmac = "0.13.0"
keyring = "4.1.5"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
