[package]
name = "cronus-activation-os"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cronus-contract = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
