[package]
name = "cronus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cronus"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
cronus-codegraph = { workspace = true }
cronus-core = { workspace = true }
nodus = { workspace = true }
serde_json = { workspace = true }
