[package]
name = "codegraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { workspace = true }

# Std-only timing harness (no external bench crate — see dependency policy).
[[bench]]
name = "extraction"
harness = false
