[package]
name = "cronus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cronus-auth-local = { workspace = true }
cronus-contract = { workspace = true }
cronus-domain = { workspace = true }
cronus-store-local = { workspace = true }

# Benchmarks use a std-only timing harness (no external bench crate — see the
# dependency policy). Each bench target is a plain `fn main()` gated behind
# `harness = false`, timed with `std::time::Instant` + `std::hint::black_box`.
[[bench]]
name = "memory_store"
harness = false

[[bench]]
name = "model_router"
harness = false
