[package]
name = "cronus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cronus-auth-local = { workspace = true }
cronus-contract = { workspace = true }
cronus-domain = { workspace = true }
cronus-store-local = { workspace = true }
cronus-model-local = { workspace = true }
# The facade hosts the nodus↔InferenceBackend bridge (l1-model-runtime §4.1):
# core depends on nodus to implement its `ModelProvider`, and on model-local to
# call the transport — nodus itself gains no dependency (LP-1 preserved).
nodus = { workspace = true }
serde_json = { workspace = true }

# Benchmarks use a std-only timing harness (no external bench crate — see the
# dependency policy). Each bench target is a plain `fn main()` gated behind
# `harness = false`, timed with `std::time::Instant` + `std::hint::black_box`.
[[bench]]
name = "memory_store"
harness = false

[[bench]]
name = "model_router"
harness = false
