[package]
name        = "nodus"
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
repository  = "https://github.com/teratron/cronus"
description = "Declarative workflow DSL and Rust runtime for AI-augmented automation pipelines"
homepage    = "https://github.com/teratron/cronus"
documentation = "https://docs.rs/nodus"
keywords    = ["workflow", "dsl", "automation", "ai", "declarative"]
categories  = ["parser-implementations", "development-tools"]
readme      = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Self-contained; zero runtime dependencies beyond std.
