[package]
name = "cronus-store-local"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
cronus-contract = { workspace = true }
keyring = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
