[package]
name = "cronus-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "cronus_tui"
path = "src/lib.rs"

[[bin]]
name = "cronus-tui"
path = "src/main.rs"

[dependencies]
cronus = { workspace = true }
crossterm = { workspace = true }
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
