[package]
name = "cronus-desktop"
version = "0.1.0"
description = "Cronus desktop application — Tauri v2 shell over the React UI"
edition = "2021"

[lib]
name = "cronus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Detach from the repo's Rust workspace (crates/*): the desktop shell builds
# independently of the core engine workspace and must not pull webview deps into it.
[workspace]
