[package]
name = "cronus-desktop"
version = "0.1.0"
description = "Cronus desktop application — Tauri v2 shell over the React UI"
edition = "2024"

[lib]
name = "cronus_desktop_lib"
# rlib only: the desktop binary links the lib statically. The mobile crate
# types (staticlib/cdylib) are re-added when mobile targets land — with the
# embedded core they overflow the windows-gnu 64K DLL export-ordinal limit.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# The embeddable core engine — the shell marshals IPC calls onto its
# capability surface and never re-implements domain logic.
cronus = { path = "../../../crates/core" }

# Detach from the repo's Rust workspace (crates/*): the desktop shell builds
# independently of the core engine workspace and must not pull webview deps into it.
[workspace]
